--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-architect
+title: @quaid's community architect corner
+description: centralized links to some of my things on github
